--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Voluntariado</title>
     <link rel="stylesheet" href="css/styles.css"> 
+    <script src="js/validador_f.js"></script>
 </head>
 <body>
     <header>
@@ -35,13 +36,12 @@
     <main>
         <h3>Formulario de Voluntariado</h3>
         <p>Únete a nuestro equipo de voluntarios y participa activamente en nuestras actividades y eventos. Para más información, visita nuestra tienda.</p>
-        
-        <form action="form.html" method="POST">
+        <form id="form.html" method="POST">
             <label for="nombre">Nombre completo:</label>
-            <input type="text" id="nombre" name="nombre" required>
+            <input type="text" id="nombre" name="nombre" />
 
             <label for="email">Correo electrónico:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" />
 
             <label for="telefono">Teléfono:</label>
             <input type="tel" id="telefono" name="telefono">
@@ -57,8 +57,10 @@
             <label for="mensaje">¿Por qué quieres ser voluntario?</label>
             <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
 
-            <button type="submit" name="btnEnviar">Enviar Solicitud</button>
+            <button type="button" id="btnProcesar">Enviar Solicitud</button>
         </form>
+        <div id="mensaje">
+        </div>
     </main>
     <footer>
         <p>© Variedades El Económico - Todos los derechos reservados</p>
